
INCLUDES = -I$(top_srcdir)/src/libstrongswan -I$(top_srcdir)/src/libtls \
	-I$(top_srcdir)/src/libtncif -I$(top_srcdir)/src/libtnccs

ipseclib_LTLIBRARIES = libpttls.la
libpttls_la_SOURCES = pt_tls.c pt_tls.h \
	pt_tls_client.c pt_tls_client.h \
	pt_tls_server.c pt_tls_server.h \
	pt_tls_dispatcher.c pt_tls_dispatcher.h
